...
          styles.buttonWrapper,
          {
            transform: [{scale: scaleAnim}],
          },
        ]}
        {...panResponder.panHandlers}
        testID="record_button">
        <FAB
          icon={getButtonIcon()}
          color="#fff"
          style={[
            styles.fab,
            {
...
